--- a/MonetDB5/RunMserver.in
+++ b/MonetDB5/RunMserver.in
@@ -23,8 +23,8 @@ builddir="${buildbase}/MonetDB5"
 srcdir=`cd '@Xsrcdir@'; pwd`
 uname=`uname`
 
-# where compiled modules are to be found
-MOD_PATH="${builddir}/src/compiler/.libs:${builddir}/src/compiler:${srcdir}/src/compiler:${builddir}/src/optimizer/.libs:${builddir}/src/optimizer:${srcdir}/src/optimizer:${builddir}/src/scheduler/.libs:${builddir}/src/scheduler:${srcdir}/src/scheduler:${builddir}/src/modules/atoms/.libs:${builddir}/src/modules/atoms:${srcdir}/src/modules/atoms:${builddir}/src/modules/kernel/.libs:${builddir}/src/modules/kernel:${srcdir}/src/modules/kernel:${builddir}/src/modules/mal/.libs:${builddir}/src/modules/mal:${srcdir}/src/modules/mal"
+# where compiled MonetDB5 modules are to be found
+MOD_PATH="${builddir}/src/compiler/.libs:${builddir}/src/compiler:${builddir}/src/optimizer/.libs:${builddir}/src/optimizer:${builddir}/src/scheduler/.libs:${builddir}/src/scheduler:${builddir}/src/modules/atoms/.libs:${builddir}/src/modules/atoms:${builddir}/src/modules/kernel/.libs:${builddir}/src/modules/kernel:${builddir}/src/modules/mal/.libs:${builddir}/src/modules/mal"
 
 if [ "${LD_LIBRARY_PATH}" ] ; then
 	LD_LIBRARY_PATH=":${LD_LIBRARY_PATH}"
