--- a/pathfinder/RunMserver.in
+++ b/pathfinder/RunMserver.in
@@ -19,7 +19,11 @@
 buildbase=@QXBUILD@
 builddir="${buildbase}/pathfinder"
 
-# where compiled modules are to be found
-MOD_PATH="${builddir}/runtime/.libs:${builddir}/runtime:${builddir}/modules/pftijah/.libs:${builddir}/modules/pftijah:`monetdb4-config --modpath`"
+# where compiled Pathfinder modules are to be found
+MOD_PATH="${builddir}/runtime/.libs:${builddir}/runtime:${builddir}/modules/pftijah/.libs:${builddir}/modules/pftijah"
+
+# where compiled MonetDB4 modules are to be found
+MOD_PATH="${MOD_PATH}:${buildbase}/MonetDB4/src/modules/plain/.libs:${buildbase}/MonetDB4/src/modules/plain:${buildbase}/MonetDB4/src/modules/contrib/.libs:${buildbase}/MonetDB4/src/modules/contrib:${buildbase}/MonetDB4/src/modules/calibrator/.libs:${buildbase}/MonetDB4/src/modules/calibrator:${buildbase}/MonetDB4/src/mapi/.libs:${buildbase}/MonetDB4/src/mapi"
+@HAVE_NETCDF_TRUE@ MOD_PATH="${MOD_PATH}:${buildbase}/MonetDB4/src/modules/mnetcdf/.libs:${buildbase}/MonetDB4/src/modules/mnetcdf"
 
 exec Mserver --set monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" ${1+"$@"}
