--- a/geom/RunMserver.bat.in
+++ b/geom/RunMserver.bat.in
@@ -14,20 +14,45 @@ set monetdb4_prefix=@XMONETDB4_PREFIX@
 set monetdb5_prefix=@XMONETDB5_PREFIX@
 set sql_prefix=@XSQL_PREFIX@
 
-if %V% == 4 call "%monetdb4_prefix%\bin\monetdb4-config.bat" --internal
-if %V% == 5 call "%monetdb5_prefix%\bin\monetdb5-config.bat" --internal
-call "%sql_prefix%\bin\monetdb-sql-config.bat" --internal
-
 set buildbase=@BUILD@
 set builddir=%buildbase%\geom
 
-set MOD_PATH=%modpath%
-if %V% == 4 set MOD_PATH=%modpath4%;%MOD_PATH%
-if %V% == 5 set MOD_PATH=%modpath5%;%MOD_PATH%
+set MOD_PATH=%builddir%\src\monetdb%V%\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\src\monetdb%V%
+set MOD_PATH=%MOD_PATH%;%builddir%\src\sql
 
-set MOD_PATH=%builddir%\src\sql;%MOD_PATH%
-set MOD_PATH=%builddir%\src\monetdb%V%;%MOD_PATH%
-set MOD_PATH=%builddir%\src\monetdb%V%\.libs;%MOD_PATH%
+if not %V% == 4 goto skip_4
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\scripts
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\scripts\tools
+:skip_4
+
+if not %V == 5 goto skip_5
+set MOD_PATH=%MOD_PATH%;%buildbase%\sql\src\backends\monet5\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\sql\src\backends\monet5\.libs
+
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal
+:skip_5
 
 set PATH=%MOD_PATH%;%PATH%
 
