--- a/geom/RunMtest.bat.in
+++ b/geom/RunMtest.bat.in
@@ -20,26 +20,65 @@ set monetdb4_prefix=@XMONETDB4_PREFIX@
 set monetdb5_prefix=@XMONETDB5_PREFIX@
 set sql_prefix=@XSQL_PREFIX@
 
-if %V% == 4 call "%monetdb4_prefix%\bin\monetdb4-config.bat" --internal
-if %V% == 5 call "%monetdb5_prefix%\bin\monetdb5-config.bat" --internal
-call "%sql_prefix%\bin\monetdb-sql-config.bat" --internal
-
 set pkg=monetdb-geom
 set buildbase=@XBUILD@
 set builddir=%buildbase%\geom
 set srcdir=@XSOURCE@\geom
 
-set MOD_PATH=%modpath%
-if %V% == 4 set MOD_PATH=%modpath4%;%MOD_PATH%
-if %V% == 5 set MOD_PATH=%modpath5%;%MOD_PATH%
-
-set MOD_PATH=%builddir%\src\sql;%MOD_PATH%
-set MOD_PATH=%builddir%\src\monetdb%V%;%MOD_PATH%
-set MOD_PATH=%builddir%\src\monetdb%V%\.libs;%MOD_PATH%
+set MOD_PATH=%builddir%\src\monetdb%V%\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\src\monetdb%V%
+set MOD_PATH=%MOD_PATH%;%builddir%\src\sql
 
 REM enable auto-loading of modules before `make install`
 if not exist %builddir%\src\monetdb%V%\autoload mkdir %builddir%\src\monetdb%V%\autoload
 copy /y %srcdir%\src\monetdb%V%\??_*.mal %builddir%\src\monetdb%V%\autoload
+
+if not %V% == 4 goto skip_4
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf
+set MOD_PATH=%MOD_PATH%;%srcdir%\..\MonetDB4\scripts\tools
+:skip_4
+
+if not %V% == 5 goto skip_5
+set MOD_PATH=%MOD_PATH%;%buildbase%\sql\src\backends\monet5\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\sql\src\backends\monet5
+set MOD_PATH=%MOD_PATH%;%buildbase%\sql\src\sql
+
+REM enable auto-loading of modules before `make install`
+if not exist %buildbase%\sql\src\backends\monet5\autoload mkdir %buildbase%\sql\src\backends\monet5\autoload
+copy /y %srcdir%\..\sql\src\backends\monet5\??_*.mal %buildbase%\sql\src\backends\monet5\autoload
+
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\crackers\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\crackers
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\rdf\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\rdf
+
+REM enable auto-loading of modules before `make install`
+if not exist %buildbase%\MonetDB5\src\modules\mal\rdf\autoload mkdir %buildbase%\MonetDB5\src\modules\mal\rdf\autoload
+copy /y %srcdir%\..\MonetDB5\src\modules\mal\rdf\??_*.mal %buildbase%\MonetDB5\src\modules\mal\rdf\autoload
+if not exist %buildbase%\MonetDB5\src\modules\atoms\autoload mkdir %buildbase%\MonetDB5\src\modules\atoms\autoload
+copy /y %srcdir%\..\MonetDB5\src\modules\atoms\??_*.mal %buildbase%\MonetDB5\src\modules\atoms\autoload
+:skip_5
 
 set PATH=%MOD_PATH%;%PATH%
 
