--- a/pathfinder/RunMtest.bat.in
+++ b/pathfinder/RunMtest.bat.in
@@ -16,19 +16,54 @@ if "%1" == "-5" set V=5& shift
 set monetdb4_prefix=@XMONETDB4_PREFIX@
 set monetdb5_prefix=@XMONETDB5_PREFIX@
 
-if %V% == 4 call "%monetdb4_prefix%\bin\monetdb4-config.bat" --internal
-if %V% == 5 call "%monetdb5_prefix%\bin\monetdb5-config.bat" --internal
-
 set pkg=monetdb-xquery
 set buildbase=@XBUILD@
 set builddir=%buildbase%\pathfinder
 set srcdir=@XSOURCE@\pathfinder
 
-set MOD_PATH=%modpath%
-set MOD_PATH=%builddir%\modules\pftijah;%MOD_PATH%
-set MOD_PATH=%builddir%\modules\pftijah\.libs;%MOD_PATH%
-set MOD_PATH=%builddir%\runtime;%MOD_PATH%
-set MOD_PATH=%builddir%\runtime\.libs;%MOD_PATH%
+set MOD_PATH=%builddir%\runtime\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\runtime
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\pftijah\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\modules\pftijah
+
+if not %V% == 4 goto skip_4
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\plain
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\contrib
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\calibrator
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\mapi
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB4\src\modules\mnetcdf
+set MOD_PATH=%MOD_PATH%;%srcdir%\..\MonetDB4\scripts\tools
+:skip_4
+
+if not %V% == 5 goto skip_5
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\crackers\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\crackers
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\rdf\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\rdf
+
+REM enable auto-loading of modules before `make install`
+if not exist %buildbase%\MonetDB5\src\modules\mal\rdf\autoload mkdir %buildbase%\MonetDB5\src\modules\mal\rdf\autoload
+copy /y %srcdir%\..\MonetDB5\src\modules\mal\rdf\??_*.mal %buildbase%\MonetDB5\src\modules\mal\rdf\autoload
+if not exist %buildbase%\MonetDB5\src\modules\atoms\autoload mkdir %buildbase%\MonetDB5\src\modules\atoms\autoload
+copy /y %srcdir%\..\MonetDB5\src\modules\atoms\??_*.mal %buildbase%\MonetDB5\src\modules\atoms\autoload
+:skip_5
 
 set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\compiler;%PATH%
