--- a/sql/RunMserver.bat.in
+++ b/sql/RunMserver.bat.in
@@ -4,13 +4,24 @@ setlocal
 
 set monetdb5_prefix=@XMONETDB5_PREFIX@
 
-call "%monetdb5_prefix%\bin\monetdb5-config.bat" --internal
-
 set buildbase=@XBUILD@
 set builddir=%buildbase%\sql
 
-set MOD_PATH=%modpath%
-set MOD_PATH=%builddir%\src\backends\monet5\.libs;%MOD_PATH%
+set MOD_PATH=%builddir%\src\backends\monet5\.libs
+set MOD_PATH=%MOD_PATH%;%builddir%\src\backends\monet5\.libs
+
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\compiler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\optimizer
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\scheduler
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\atoms
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\kernel
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal\.libs
+set MOD_PATH=%MOD_PATH%;%buildbase%\MonetDB5\src\modules\mal
 
 set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\src\server;%PATH%
