--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -37,12 +37,32 @@ do
     esac
 done
 
-# where compiled modules are to be found
+# where compiled Pathfinder modules are to be found
 for d in src/monetdb$V
 do
 	MOD_PATH="${MOD_PATH}${builddir}/$d/.libs:${builddir}/$d:"
 done
-MOD_PATH="${MOD_PATH}`monetdb$V-config --modpath`"
+
+case "$V" in
+4)
+# where compiled MonetDB4 modules are to be found
+for d in src/modules/plain src/modules/contrib src/modules/calibrator src/mapi @HAVE_NETCDF_TRUE@ src/modules/mnetcdf
+do
+	MOD_PATH="${MOD_PATH}${buildbase}/MonetDB4/$d/.libs:${builddir}/$d:"
+done
+MOD_PATH="${MOD_PATH}${srcdir}/../MonetDB4/scripts/tools"
+;;
+5)
+# where compiled MonetDB5 modules are to be found
+for d in src/compiler src/optimizer src/scheduler src/modules/atoms src/modules/kernel src/modules/mal src/modules/mal/crackers src/modules/mal/rdf
+do
+	MOD_PATH="${MOD_PATH}${buildbase}/MonetDB5/$d/.libs:${builddir}/$d:"
+	# enable auto-loading of modules before `make install`
+	mkdir -p ${buildbase}/MonetDB5/$d/autoload
+	cp -f ${srcdir}/../MonetDB5/$d/[0-9][0-9]_*.mal ${buildbase}/MonetDB5/$d/autoload/ 2>/dev/null
+done
+;;
+esac
 
 # enhance various paths to find our stuff
 libpath="${MOD_PATH}"
