undo of unintended changes (part of changeset e415b6f6c712)

--- a/template/conf/monetdb-template-config.in
+++ b/template/conf/monetdb-template-config.in
@@ -20,8 +20,8 @@
 # minimal inital version as required by Mtest.py
 
 pkg="@PACKAGE@"
-source="@QSOURCE@"
-build="@QBUILD@"
+source="@QTEMPLATE_SOURCE@"
+build="@QTEMPLATE_BUILD@"
 prefix="@Qprefix@"
 exec_prefix="@Qexec_prefix@"
 
