merovingian: include correct library when linking is done
LIBS with NOINST makes no sense

--- a/sql/src/backends/monet5/merovingian/client/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/client/Makefile.ag
@@ -38,6 +38,7 @@ bin_monetdb = {
 	SOURCES = monetdb.c monetdb.1.in
 	LIBS = \
 		../utils/libmeroutil \
+		$(UUID_LIBS) \
 		../../../../../../MonetDB5/src/tools/libmonetdb5 \
 		../../../../../../MonetDB/src/gdk/libbat \
 		../../../../../../MonetDB/src/common/libstream \
