--- a/sql/src/backends/monet5/merovingian/daemon/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/daemon/Makefile.ag
@@ -59,6 +59,7 @@ bin_monetdbd = {
 		proxy.c
 	LIBS = \
 		../utils/libmeroutil \
+		$(UUID_LIBS) \
 		../../../../../../MonetDB5/src/tools/libmonetdb5 \
 		../../../../../../MonetDB/src/gdk/libbat \
 		../../../../../../MonetDB/src/common/libstream \
