make sure `RunMtest` (and thus `make check`) find our python modules in build- & source-dir i.e., before they have been install to prefix-dir
likewise for `RunMapprove`

--- a/MonetDB4/RunMtest.bat.in
+++ b/MonetDB4/RunMtest.bat.in
@@ -29,7 +29,7 @@ set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\src\monet;%PATH%
 set PATH=%builddir%\src\tools;%PATH%
 
-set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mtest.py in the source directory
 pushd %srcdir%
