--- a/geom/RunMapprove.bat.in
+++ b/geom/RunMapprove.bat.in
@@ -18,7 +18,7 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\geom
 set srcdir=@XSOURCE@\geom
 
-set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
