--- a/sql/RunMtest.bat.in
+++ b/sql/RunMtest.bat.in
@@ -49,7 +49,7 @@ set PATH=%builddir%\src\server;%PATH%
 set PATH=%builddir%\src\storage\bat;%PATH%
 set PATH=%builddir%\src\common;%PATH%
 
-set PYTHONPATH=%builddir%\src\backends\python\monet5;%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%builddir%\src\backends\python\monet5;%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mtest.py in the source directory
 pushd %srcdir%
