--- a/MonetDB4/RunMapprove.bat.in
+++ b/MonetDB4/RunMapprove.bat.in
@@ -13,7 +13,7 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\MonetDB4
 set srcdir=@XSOURCE@\MonetDB4
 
-set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
