--- a/MonetDB4/RunMtest.in
+++ b/MonetDB4/RunMtest.in
@@ -38,7 +38,7 @@ libpath="${MOD_PATH}:${builddir}/src/monet/.libs"
 PATH="${binpath}:$PATH"
 export PATH
 
-PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
 if [ "${LD_LIBRARY_PATH}" ] ; then
