--- a/MonetDB5/RunMtest.bat.in
+++ b/MonetDB5/RunMtest.bat.in
@@ -40,7 +40,7 @@ set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\src\mal;%PATH%
 set PATH=%builddir%\src\tools;%PATH%
 
-set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mtest.py in the source directory
 pushd %srcdir%
