--- a/MonetDB5/RunMtest.in
+++ b/MonetDB5/RunMtest.in
@@ -40,7 +40,7 @@ libpath="${MOD_PATH}:${builddir}/src/mal/.libs"
 PATH="${binpath}:$PATH"
 export PATH
 
-PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
 if [ "${LD_LIBRARY_PATH}" ] ; then
