--- a/clients/RunMapprove.bat.in
+++ b/clients/RunMapprove.bat.in
@@ -13,7 +13,7 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\clients
 set srcdir=@XSOURCE@\clients
 
-set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
