--- a/java/RunMapprove.bat.in
+++ b/java/RunMapprove.bat.in
@@ -13,7 +13,7 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\java
 set srcdir=@XSOURCE@\java
 
-set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
