--- a/pathfinder/RunMapprove.bat.in
+++ b/pathfinder/RunMapprove.bat.in
@@ -18,7 +18,7 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\pathfinder
 set srcdir=@XSOURCE@\pathfinder
 
-set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
