--- a/pathfinder/RunMtest.in
+++ b/pathfinder/RunMtest.in
@@ -73,7 +73,7 @@ libpath="${MOD_PATH}"
 PATH="${binpath}:$PATH"
 export PATH
 
-PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
 if [ "${LD_LIBRARY_PATH}" ] ; then
