make sure `RunMtest` (and thus `make check`) finds Mdiff & Mlog in <builddir>/testing/src

--- a/MonetDB4/RunMtest.in
+++ b/MonetDB4/RunMtest.in
@@ -32,7 +32,7 @@ done
 MOD_PATH="${MOD_PATH}${srcdir}/scripts/tools"
 
 # enhance various paths to find our stuff
-binpath="${builddir}/src/tools"
+binpath="${builddir}/src/tools:${buildbase}/testing/src"
 libpath="${MOD_PATH}:${builddir}/src/monet/.libs"
 
 PATH="${binpath}:$PATH"
