--- a/pathfinder/RunMtest.bat.in
+++ b/pathfinder/RunMtest.bat.in
@@ -62,6 +62,8 @@ if not exist %buildbase%\MonetDB5\src\modules\atoms\autoload mkdir %buildbase%\M
 copy /y %srcdir%\..\MonetDB5\src\modules\atoms\??_*.mal %buildbase%\MonetDB5\src\modules\atoms\autoload
 :skip_5
 
+set PATH=%buildbase%\testing\src;%PATH%
+
 set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\compiler;%PATH%
 set PATH=%builddir%\src\tools;%PATH%
