--- a/MonetDB4/RunMtest.bat.in
+++ b/MonetDB4/RunMtest.bat.in
@@ -25,6 +25,8 @@ set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\mnetcdf\.libs
 set MOD_PATH=%MOD_PATH%;%builddir%\src\modules\mnetcdf
 set MOD_PATH=%MOD_PATH%;%srcdir%\scripts\tools
 
+set PATH=%buildbase%\testing\src;%PATH%
+
 set PATH=%MOD_PATH%;%PATH%
 set PATH=%builddir%\src\monet;%PATH%
 set PATH=%builddir%\src\tools;%PATH%
