--- a/geom/RunMtest.bat.in
+++ b/geom/RunMtest.bat.in
@@ -76,6 +76,8 @@ if not exist %buildbase%\MonetDB5\src\modules\atoms\autoload mkdir %buildbase%\M
 copy /y %srcdir%\..\MonetDB5\src\modules\atoms\??_*.mal %buildbase%\MonetDB5\src\modules\atoms\autoload
 :skip_5
 
+set PATH=%buildbase%\testing\src;%PATH%
+
 set PATH=%MOD_PATH%;%PATH%
 
 rem to find geos_c.dll
