--- a/java/RunMtest.bat.in
+++ b/java/RunMtest.bat.in
@@ -13,6 +13,8 @@ set buildbase=@XBUILD@
 set builddir=%buildbase%\java
 set srcdir=@XSOURCE@\java
 
+set PATH=%buildbase%\testing\src;%PATH%
+
 set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 
 REM execute Mtest.py in the source directory
