--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -66,6 +66,8 @@ esac
 
 # enhance various paths to find our stuff
 libpath="${MOD_PATH}"
+PATH="${buildbase}/testing/src:$PATH"
+export PATH
 
 PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
