make sure <builddir>/testing/src/Mlog is executable

--- a/MonetDB5/RunMtest.in
+++ b/MonetDB5/RunMtest.in
@@ -40,6 +40,8 @@ libpath="${MOD_PATH}:${builddir}/src/mal/.libs"
 PATH="${binpath}:$PATH"
 export PATH
 
+chmod +x ${buildbase}/testing/src/Mlog
+
 PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
