--- a/MonetDB4/RunMtest.in
+++ b/MonetDB4/RunMtest.in
@@ -38,6 +38,8 @@ libpath="${MOD_PATH}:${builddir}/src/monet/.libs"
 PATH="${binpath}:$PATH"
 export PATH
 
+chmod +x ${buildbase}/testing/src/Mlog
+
 PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
