--- a/geom/RunMtest.in
+++ b/geom/RunMtest.in
@@ -80,6 +80,8 @@ libpath="${MOD_PATH}"
 PATH="${buildbase}/testing/src:$PATH"
 export PATH
 
+chmod +x ${buildbase}/testing/src/Mlog
+
 PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
