--- a/pathfinder/RunMtest.in
+++ b/pathfinder/RunMtest.in
@@ -73,6 +73,8 @@ libpath="${MOD_PATH}"
 PATH="${binpath}:$PATH"
 export PATH
 
+chmod +x ${buildbase}/testing/src/Mlog
+
 PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
