--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -69,6 +69,8 @@ libpath="${MOD_PATH}"
 PATH="${buildbase}/testing/src:$PATH"
 export PATH
 
+chmod +x ${buildbase}/testing/src/Mlog
+
 PYTHONPATH="${buildbase}/testing/src:${srcdir}/../testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
