--- a/MonetDB4/RunMapprove.bat.in
+++ b/MonetDB4/RunMapprove.bat.in
@@ -8,7 +8,7 @@ goto end
 
 setlocal
 
-set pkg=monetdb4
+set pkg=MonetDB4
 set buildbase=@XBUILD@
 set builddir=%buildbase%\MonetDB4
 set srcdir=@XSOURCE@\MonetDB4
@@ -18,7 +18,7 @@ set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mapprove.py" "--config=%builddir%\conf\MonetDB.conf" --package=%pkg% "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\src\Mapprove.py" "--config=%builddir%\conf\MonetDB.conf" --package=%pkg% "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
