--- a/MonetDB4/RunMtest.bat.in
+++ b/MonetDB4/RunMtest.bat.in
@@ -8,7 +8,7 @@ goto end
 
 setlocal
 
-set pkg=monetdb4
+set pkg=MonetDB4
 set buildbase=@XBUILD@
 set builddir=%buildbase%\MonetDB4
 set srcdir=@XSOURCE@\MonetDB4
@@ -36,7 +36,7 @@ set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" "--config=%builddir%\conf\MonetDB.conf" --package=%pkg% "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\src\Mtest.py" "--config=%builddir%\conf\MonetDB.conf" --package=%pkg% "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
