--- a/MonetDB5/RunMapprove.bat.in
+++ b/MonetDB5/RunMapprove.bat.in
@@ -8,7 +8,7 @@ goto end
 
 setlocal
 
-set pkg=monetdb5
+set pkg=MonetDB5
 set buildbase=@XBUILD@
 set builddir=%buildbase%\MonetDB5
 set srcdir=@XSOURCE@\MonetDB5
@@ -18,7 +18,7 @@ set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mapprove.py" --config="%builddir%/conf/monetdb5.conf" --package=%pkg% "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\src\Mapprove.py" --config="%builddir%/conf/monetdb5.conf" --package=%pkg% "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
