--- a/MonetDB5/RunMtest.in
+++ b/MonetDB5/RunMtest.in
@@ -17,7 +17,7 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-pkg=monetdb5
+pkg=MonetDB5
 buildbase=@QBUILD@
 builddir="${buildbase}/MonetDB5"
 # make sure srcdir contains absolute path name
@@ -74,4 +74,4 @@ cd "$srcdir"
 # arguments.
 # if the environment variable MTEST_AT is set (value does not matter), pass
 # the --at flag to Mtest.py so that it uses the at command as a watchdog.
-exec python "${buildbase}/testing/src/Mtest.py" --config="${builddir}/conf/monetdb5.conf" --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --TSTSRCBASE="${srcdir}" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
+exec python "${buildbase}/testing/src/Mtest.py" --config="${builddir}/conf/monetdb5.conf" --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
