--- a/geom/RunMtest.bat.in
+++ b/geom/RunMtest.bat.in
@@ -16,7 +16,7 @@ rem commandline option overrules default
 if "%1" == "-4" set V=4& shift
 if "%1" == "-5" set V=5& shift
 
-set pkg=monetdb-geom
+set pkg=geom
 set buildbase=@XBUILD@
 set builddir=%buildbase%\geom
 set srcdir=@XSOURCE@\geom
@@ -88,7 +88,7 @@ set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" -%V% "--package=%pkg%" "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
+call "%buildbase%\testing\src\Mtest.py" -%V% "--package=%pkg%" "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 popd
 endlocal
