--- a/java/RunMapprove.in
+++ b/java/RunMapprove.in
@@ -17,7 +17,7 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-pkg=monetdb-java
+pkg=java
 buildbase=@QBUILD@
 builddir="${buildbase}/java"
 # make sure srcdir contains absolute path name
@@ -32,4 +32,4 @@ cd "$srcdir"
 # execute the script.
 # if no arguments, do a recursive approve (Mapprove.py -r), else pass
 # on the arguments
-exec python "${buildbase}/testing/src/Mapprove.py" --package=${pkg} --TSTSRCBASE="${srcdir}" --TSTTRGBASE="${builddir}" "${@--r}"
+exec python "${buildbase}/testing/src/Mapprove.py" --package=${pkg} --TSTTRGBASE="${builddir}" "${@--r}"
