--- a/java/RunMtest.bat.in
+++ b/java/RunMtest.bat.in
@@ -8,7 +8,7 @@ goto end
 
 setlocal
 
-set pkg=monetdb-java
+set pkg=java
 set buildbase=@XBUILD@
 set builddir=%buildbase%\java
 set srcdir=@XSOURCE@\java
@@ -20,7 +20,7 @@ set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" --package=%pkg% "--dbfarm=%builddir%\dbfarm" "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\src\Mtest.py" --package=%pkg% "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
