--- a/java/RunMtest.in
+++ b/java/RunMtest.in
@@ -17,7 +17,7 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-pkg=monetdb-java
+pkg=java
 buildbase=@QBUILD@
 builddir="${buildbase}/java"
 # make sure srcdir contains absolute path name
@@ -41,4 +41,4 @@ cd "$srcdir"
 # arguments.
 # if the environment variable MTEST_AT is set (value does not matter), pass
 # the --at flag to Mtest.py so that it uses the at command as a watchdog.
-exec python "${buildbase}/testing/src/Mtest.py" --package=${pkg} --dbfarm="${builddir}/dbfarm" --TSTSRCBASE="${srcdir}" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
+exec python "${buildbase}/testing/src/Mtest.py" --package=${pkg} --dbfarm="${builddir}/dbfarm" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
