--- a/pathfinder/RunMtest.bat.in
+++ b/pathfinder/RunMtest.bat.in
@@ -13,7 +13,7 @@ set V=4
 if "%1" == "-4" set V=4& shift
 if "%1" == "-5" set V=5& shift
 
-set pkg=monetdb-xquery
+set pkg=pathfinder
 set buildbase=@XBUILD@
 set builddir=%buildbase%\pathfinder
 set srcdir=@XSOURCE@\pathfinder
@@ -73,7 +73,7 @@ set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" -%V% --package=%pkg% "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--xrpc_docroot=%srcdir%\runtime\xrpc" "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
+call "%buildbase%\testing\src\Mtest.py" -%V% --package=%pkg% "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--xrpc_docroot=%srcdir%\runtime\xrpc" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 popd
 endlocal
