--- a/sql/RunMapprove.bat.in
+++ b/sql/RunMapprove.bat.in
@@ -8,7 +8,7 @@ goto end
 
 setlocal
 
-set pkg=monetdb-sql
+set pkg=sql
 set buildbase=@XBUILD@
 set builddir=%buildbase%\sql
 set srcdir=@XSOURCE@\sql
@@ -18,7 +18,7 @@ set PYTHONPATH=%buildbase%\testing\src;%srcdir%\..\testing\src;%PYTHONPATH%
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mapprove.py" "--package=%pkg%" "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
+call "%buildbase%\testing\src\Mapprove.py" "--package=%pkg%" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 popd
 endlocal
